# src/main/java/web_rize/user_subscription/entity/User.java
@@ -1,0 +1,18 @@
+package web_rize.user_subscription.entity;
+
+import jakarta.persistence.*;
+import lombok.Data;
+
+import java.util.UUID;
+
+@Data
+@Entity
+@Table(name = "user", schema = "users_subscriptions")
+public class User {
+    @Id
+    @GeneratedValue
+    private UUID id;
+
+    @Column(name = "full_name")
+    private String fullName;
+}
